feat: 新增移除孤兒圖片
